# Chatbot-for-Parking-Space-Reservation

./: .env.example  .gitignore  PHASE1.md  README.md  STAGE1_COMPLETE.md  STAGE2_QUICKSTART.md  STAGE4_IMPLEMENTATION_SUMMARY.md  STAGE4_README.md  main.py  pyproject.toml  run_chatbot.sh  test_admin_approval_flow.py  test_admin_orchestrator.py  test_conversation_history.py  test_events.py  test_events_phase3.py  test_fresh_reservation.py  test_metrics_phase4.py  test_orchestrator.py  test_reservation_data.py  test_stage4_complete.py
rag-and-chatbot/: RAG_PIPELINE_EVALUATION.md  REFACTORING_SUMMARY.md  STAGE3_BIND_TOOLS_UPDATE.md  STAGE3_IMPLEMENTATION_SUMMARY.md  STAGE3_README.md  STAGE4_IMPLEMENTATION_SUMMARY.md  evaluation_report.json  example_rag_pipeline_evaluation.py  rag_pipeline_evaluation_report.json  test_mcp_server.py  test_stage2.py  test_stage3_integration.py  test_stage4_complete.py  test_tool_integration.py
rag-and-chatbot/data/: confirmed_reservations.txt
rag-and-chatbot/docs/: parking_policy.md
rag-and-chatbot/src/api/: __init__.py  admin_api.py  run_api.py
rag-and-chatbot/src/chatbot/: __init__.py  admin_graph.py  admin_main.py  admin_nodes.py  admin_state.py  evaluation.py  graph.py  guardrails.py  main.py  mcp_tools.py  nodes.py  state.py  verify_setup.py
rag-and-chatbot/src/chatbot/orchestrator/: __init__.py  graph.py  nodes.py  state.py  subgraphs.py
rag-and-chatbot/src/mcp/: confirmation_server.py  confirmation_writer.py  mcp_client.py
rag-and-chatbot/src/notebooks/: evaluate_rag.ipynb  generate_data.ipynb  main.ipynb  test_chatbot.ipynb  test_guardrails.ipynb  test_retrieval.ipynb  test_stage2.ipynb
rag-and-chatbot/src/shared/: __init__.py  config.py  database_service.py  events.py  llm_pool.py  metrics.py  models.py  notifications.py
rag-and-chatbot/tests/: test_orchestrator_integration.py  test_performance.py
src/notebooks/: main.ipynb
