[project]
name = "chatbot-for-parking-space-reservation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "numpy>=2.4.2",
    "openai>=2.21.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pymilvus>=2.6.9",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "tiktoken>=0.12.0",
]
