[project]
name = "chatbot-for-parking-space-reservation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-milvus>=0.3.3",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.0",
    "numpy>=2.4.2",
    "openai>=2.21.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pymilvus[milvus-lite]>=2.6.9",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.3",
    "setuptools<82.0.0",
    "tiktoken>=0.12.0",
]
